<resources>
    <string name="app_name">Collabolio App</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="no_account">Tidak punya akun?</string>
    <string name="go_to_register">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="go_to_login">Sign In</string>
    <string name="or">Atau</string>
    <string name="icon_image">Icon Image</string>
    <string name="sign_in_dengan_google">Sign In Dengan Google</string>
    <string name="collabolio">Collabolio</string>
    <string name="collabolio_description">Collabolio matches you with coworkers to build impressive portfolios together.</string>
    <string name="hint_name">Nama</string>
    <string name="hint_age">Age</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_signout">Signout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_login">Periksa kembali email dan password</string>
    <string name="bio">Input Data Diri</string>
    <string name="biografi">Bio</string>
    <string name="no_telp">Nomor Telepon</string>
    <string name="go_to_main">Lanjut</string>
    <string name="gender">Gender :</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="hint_skills">Masukkan Keahlian Anda</string>
    <string name="hint_address">Alamat</string>
    <string name="hint_education">Pendidikan</string>
    <string name="hint_birth">Tanggal Lahir</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_user">User</string>
    <string name="error_confirm_password">Periksa kembali konfimasi password</string>
    <string name="profile_name">Name : %s</string>
    <string name="profile_email">Email : %s</string>
    <string name="profile_birthdate">Tanggal Lahir : %s</string>
    <string name="profile_location">Alamat : %s</string>
    <string name="profile_number_phone">Nomor Telepon : %s</string>
    <string name="profile_education">Pendidikan : %s</string>
    <string name="profile_bio">Bio : %s</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="btn_logout">Logout</string>
    <string name="profile_gender">Gender : %s</string>
    <string name="hint_degree">Gelar dan Jurusan</string>
    <string name="hint_school">Nama Sekolah atau Universitas</string>
    <string name="hint_skills_interests">Skills dan Interests</string>
    <string name="hint_interest">Masukkan Posisi Rekan yang di Inginkan</string>
    <string name="profile_skills">Keahlian : %s</string>
    <string name="desc_favorite">User Favorite</string>
    <string name="desc_skip">User Skip</string>
    <string name="soon">Coming Soon</string>
</resources>