<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InputBioActivity"
    android:padding="16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textSize="36sp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:background="@drawable/custom_edit_text"
            android:minHeight="48dp"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/input_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_telp"
            android:background="@drawable/custom_edit_text"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name" />

        <EditText
            android:id="@+id/input_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_birth"
            android:background="@drawable/custom_edit_text"
            android:inputType="date"
            android:minHeight="48dp"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_number" />

        <RadioGroup
            android:id="@+id/radioGroupIsMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_date">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="16sp"
                android:layout_marginEnd="16dp"/>

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginEnd="16dp"/>

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>


        <EditText
            android:id="@+id/input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address"
            android:background="@drawable/custom_edit_text"
            android:minHeight="48dp"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupIsMale" />


        <EditText
            android:id="@+id/input_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/biografi"
            android:background="@drawable/custom_edit_text"
            android:inputType="textMultiLine"
            android:lines="6"
            android:gravity="top"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_address" />

        <TextView
            android:id="@+id/tv_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_education"
            android:textSize="16sp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_bio" />

        <EditText
            android:id="@+id/input_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_degree"
            android:background="@drawable/custom_edit_text"
            android:minHeight="48dp"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_education" />

        <EditText
            android:id="@+id/input_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_school"
            android:background="@drawable/custom_edit_text"
            android:minHeight="48dp"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_degree" />

        <TextView
            android:id="@+id/tv_skills_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/hint_skills_interests"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_school"/>

        <MultiAutoCompleteTextView
            android:id="@+id/mactv_skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/hint_skills"
            android:padding="8dp"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_skills_interest" />

        <MultiAutoCompleteTextView
            android:id="@+id/mactv_interests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/hint_interest"
            android:padding="8dp"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mactv_skills" />

        <Button
            android:id="@+id/btn_inputBio"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_main"
            android:textSize="16sp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mactv_interests"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>