<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="36dp"
    card_view:cardCornerRadius="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/gradient_shape"
            card_view:layout_constraintBottom_toBottomOf="@+id/iv_user"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="16dp"
            android:textSize="24sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/iv_user"
            card_view:layout_constraintStart_toStartOf="parent"
            tools:text="displayName" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            card_view:layout_constraintStart_toStartOf="@+id/tv_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="Email" />

        <TextView
            android:id="@+id/tv_skills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_skills"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            card_view:layout_constraintStart_toStartOf="@+id/tv_email"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_skills">

            <ImageView
                android:id="@+id/iv_skip"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="150dp"
                android:clickable="true"
                android:contentDescription="@string/desc_favorite"
                android:focusable="true"
                android:src="@drawable/icon_skip" />

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:contentDescription="@string/desc_skip"
                android:focusable="true"
                android:src="@drawable/icon_favorite" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>